2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* apps/fft2d/run.sh: Add missing Epiphany elf parameter.
	* apps/fft2d/test.sh: Likewise.

2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* apps/e-bandwidth-test/build.sh: Don't build srec file
	* apps/e-bandwidth-test/src/e-bandwidth-test-host.c: Use .elf
	instead of srec.
	(int main): Fix segfault.
	(int SRAM_speed): Repeat tests to get more stable results.

2015-04-06  Ola Jeppsson  <ola@adapteva.com>

	* apps/matmul-16/host/src/matmul_host.c: Fix compilation errors.

2015-04-04  Andreas Olofsson  <andreas@adapteva.com>

	* test/e-mesh-test/src/e-task.c (int main): Clarified test

2015-04-04  Andreas Olofsson  <andreas@adapteva.com>

	* test/e-mesh-test/build.sh: Add basic mesh test. New file.
	* test/e-mesh-test/src/e-task.c: New file.
	* test/e-mesh-test/test.sh: New file.

2015-04-04  Andreas Olofsson  <andreas@adapteva.com>

	* apps/eprime/build.sh: Cleanup
	* apps/eprime/src/prime.c (int main): Likewise.
	* apps/matmul-16/run.sh: Likewise.
	* apps/matmul-16/test.sh: Likewise
	* scripts/selftest: Likewise.

2015-04-03  Andreas Olofsson  <andreas@adapteva.com>

	* (all): Cleanup: creating self test script making every test
	print out PASS/FAIL from host. Remove license headers.
	* apps/e-bandwidth-test/src/e-bandwidth-test-host.c (int main):
	(int SRAM_speed):
	(int EPI_speed):
	* apps/e-dump-regs/src/e-dump-regs.c:
	* apps/e-fill-mem/src/e-fill-mem.c (void usage):
	* apps/fft2d/host/src/fft2d_host.c (void get_args):
	* apps/matmul-16/host/src/matmul_host.c (int matmul_go):
	* scripts/LIST.E16:
	* scripts/TestEpiphany.pl:
	* scripts/build_all.sh:
	* scripts/selftest: New file.
	* test/e-extmem-test/src/e-task.c:
	* test/e-loopback-test/src/e-task.c:
	* test/e-main/build.sh: Remove.
	* test/e-main/run.sh: Remove.
	* test/e-main/src/common.h: Remove.
	* test/e-main/src/e-main.c: Remove.
	* test/e-main/src/e-task.c: Remove.
	* test/e-main/test.sh: Remove.
	* test/e-matmul-test/src/e-task.c: