@@ -7,6 +7,11 @@ ELDF=${ESDK}/bsps/current/internal.ldf
 
 SCRIPT=$(readlink -f "$0")
 EXEPATH=$(dirname "$SCRIPT")
+
+# Build run time dependencies
+[ -f $EXEPATH/../e-test/bin/e-test.elf ] ||
+    (cd $EXEPATH/../e-test && ./build.sh)
+
 cd $EXEPATH
 
 # Create the binaries directory
